ibus-tweaker@tuberry.github.com/stylesheet.css
/*
 *   Common
 */


.ibus-tweaker-candidate-popup-content {
    border-radius: 0.2em;
    border-width: 1px;
    padding: 0;
}

.ibus-tweaker-candidate-popup-text {
    border-width: 0;
    border-bottom-width: 1px;
    padding: 0;
}

.ibus-tweaker-candidate-box {
    transition-duration: 100ms;
    border-radius: 0;
    padding: 0.5em;
}

/* hide page buttons */
.ibus-tweaker-candidate-page-button,
.ibus-tweaker-candidate-page-button-box,
.ibus-tweaker-candidate-page-button-previous,
.ibus-tweaker-candidate-page-button-next,
.ibus-tweaker-candidate-page-button-icon {
    width: 0 !important;
    height: 0 !important;
    border-width: 0 !important;
    color: transparent !important;
    background-color: transparent !important;
}

.ibus-tweaker-candidate-popup-boxpointer {
    -arrow-background-color: transparent;
    -arrow-border-radius: 0.75em;
    -arrow-rise: 0.3em;
}

/*
 *   Text
 */


.ibus-tweaker-candidate-popup-content {
    color: rgba(0, 0, 0, 0.95);
    background-color: rgba(255, 255, 255, 1);
}

.ibus-tweaker-candidate-box:selected {
    color: rgba(0, 0, 0, 1);
}

.ibus-tweaker-candidate-box .ibus-tweaker-candidate-index {
    color: rgba(0, 0, 0, 0.6);
}

.night .ibus-tweaker-candidate-popup-content {
    color: rgba(255, 255, 255, 0.95);
    background-color: rgba(40, 40, 40, 1);
}

.night .ibus-tweaker-candidate-box:selected {
    color: rgba(255, 255, 255, 1);
}

.night .ibus-tweaker-candidate-box .ibus-tweaker-candidate-index {
    color: rgba(255, 255, 255, 0.6);
}

/*
 *   Colors
 */


/*
 *  #FC94A3
 */
.red .ibus-tweaker-candidate-popup-content,
.red .ibus-tweaker-candidate-popup-text {
    border-color: rgba(252, 148, 163, 0.95);
}

.red .ibus-tweaker-candidate-box:hover {
    background-color: rgba(252, 148, 163, 0.6);
}

.red .ibus-tweaker-candidate-box:selected {
    background-color: rgba(252, 148, 163, 0.95);
}

/*
 *  #CB275D
 */
.night-red .ibus-tweaker-candidate-popup-content,
.night-red .ibus-tweaker-candidate-popup-text {
    border-color: rgba(203, 39, 93, 0.95);
}

.night-red .ibus-tweaker-candidate-box:hover {
    background-color: rgba(203, 39, 93, 0.6);
}

.night-red .ibus-tweaker-candidate-box:selected {
    background-color: rgba(203, 39, 93, 0.95);
}


/*
 *  #AFE0A4
 */
.green .ibus-tweaker-candidate-popup-content,
.green .ibus-tweaker-candidate-popup-text {
    border-color: rgba(175, 224, 164, 0.95);
}

.green .ibus-tweaker-candidate-box:hover {
    background-color: rgba(175, 224, 164, 0.6);
}

.green .ibus-tweaker-candidate-box:selected {
    background-color: rgba(175, 224, 164, 0.95);
}

/*
 *  #26A527
 */
.night-green .ibus-tweaker-candidate-popup-content,
.night-green .ibus-tweaker-candidate-popup-text {
    border-color: rgba(38, 165, 39, 0.95);
}

.night-green .ibus-tweaker-candidate-box:hover {
    background-color: rgba(38, 165, 39, 0.6);
}

.night-green .ibus-tweaker-candidate-box:selected {
    background-color: rgba(38, 165, 39, 0.95);
}


/*
 *  #FEBE9E
 */
.orange .ibus-tweaker-candidate-popup-content,
.orange .ibus-tweaker-candidate-popup-text {
    border-color: rgba(254, 190, 158, 0.95);
}

.orange .ibus-tweaker-candidate-box:hover {
    background-color: rgba(254, 190, 158, 0.6);
}

.orange .ibus-tweaker-candidate-box:selected {
    background-color: rgba(254, 190, 158, 0.95);
}

/*
 *  #C64622
 */
.night-orange .ibus-tweaker-candidate-popup-content,
.night-orange .ibus-tweaker-candidate-popup-text {
    border-color: rgba(198, 70, 34, 0.95);
}

.night-orange .ibus-tweaker-candidate-box:hover {
    background-color: rgba(198, 70, 34, 0.6);
}

.night-orange .ibus-tweaker-candidate-box:selected {
    background-color: rgba(198, 70, 34, 0.95);
}


/*
 *  #9FC5F1
 */
.blue .ibus-tweaker-candidate-popup-content,
.blue .ibus-tweaker-candidate-popup-text {
    border-color: rgba(159, 197, 241, 0.95);
}

.blue .ibus-tweaker-candidate-box:hover {
    background-color: rgba(159, 197, 241, 0.6);
}

.blue .ibus-tweaker-candidate-box:selected {
    background-color: rgba(159, 197, 241, 0.95);
}

/*
 *  #1A5FB4
 */
.night-blue .ibus-tweaker-candidate-popup-content,
.night-blue .ibus-tweaker-candidate-popup-text {
    border-color: rgba(26, 95, 180, 0.95);
}

.night-blue .ibus-tweaker-candidate-box:hover {
    background-color: rgba(26, 95, 180, 0.6);
}

.night-blue .ibus-tweaker-candidate-box:selected {
    background-color: rgba(26, 95, 180, 0.95);
}


/*
 *  #DFAFED
 */
.purple .ibus-tweaker-candidate-popup-content,
.purple .ibus-tweaker-candidate-popup-text {
    border-color: rgba(223, 175, 237, 0.95);
}

.purple .ibus-tweaker-candidate-box:hover {
    background-color: rgba(223, 175, 237, 0.6);
}

.purple .ibus-tweaker-candidate-box:selected {
    background-color: rgba(223, 175, 237, 0.95);
}

/*
 *  #613583
 */
.night-purple .ibus-tweaker-candidate-popup-content,
.night-purple .ibus-tweaker-candidate-popup-text {
    border-color: rgba(97, 53, 131, 0.95);
}

.night-purple .ibus-tweaker-candidate-box:hover {
    background-color: rgba(97, 53, 131, 0.6);
}

.night-purple .ibus-tweaker-candidate-box:selected {
    background-color: rgba(97, 53, 131, 0.95);
}


/*
 *  #A9DFEE
 */
.turquoise .ibus-tweaker-candidate-popup-content,
.turquoise .ibus-tweaker-candidate-popup-text {
    border-color: rgba(169, 223, 238, 0.95);
}

.turquoise .ibus-tweaker-candidate-box:hover {
    background-color: rgba(169, 223, 238, 0.6);
}

.turquoise .ibus-tweaker-candidate-box:selected {
    background-color: rgba(169, 223, 238, 0.95);
}

/*
 *  #1289A2
 */
.night-turquoise .ibus-tweaker-candidate-popup-content,
.night-turquoise .ibus-tweaker-candidate-popup-text {
    border-color: rgba(18, 137, 162, 0.95);
}

.night-turquoise .ibus-tweaker-candidate-box:hover {
    background-color: rgba(18, 137, 162, 0.6);
}

.night-turquoise .ibus-tweaker-candidate-box:selected {
    background-color: rgba(18, 137, 162, 0.95);
}


/*
 *  #C1C0C2
 */
.grey .ibus-tweaker-candidate-popup-content,
.grey .ibus-tweaker-candidate-popup-text {
    border-color: rgba(193, 192, 194, 0.95);
}

.grey .ibus-tweaker-candidate-box:hover {
    background-color: rgba(193, 192, 194, 0.6);
}

.grey .ibus-tweaker-candidate-box:selected {
    background-color: rgba(193, 192, 194, 0.95);
}

/*
 *  #49474D
 */
.night-grey .ibus-tweaker-candidate-popup-content,
.night-grey .ibus-tweaker-candidate-popup-text {
    border-color: rgba(73, 71, 77, 0.95);
}

.night-grey .ibus-tweaker-candidate-box:hover {
    background-color: rgba(73, 71, 77, 0.6);
}

.night-grey .ibus-tweaker-candidate-box:selected {
    background-color: rgba(73, 71, 77, 0.95);
}

